# finanzapp

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: production.yml
backend/: .dockerignore  Dockerfile  Makefile  README copy.md  docker-compose.yml  poetry_conditional.sh  pyproject.toml
backend/apps/: admin.py  bank_loader.py  bank_scraper.py  bedrock_chat.py  models.py  openai_chat.py
backend/apps/app_schema/: types.py
backend/apps/helpers/: __init__.py  get_master_entity_from_description.py  read_guidline.py
backend/apps/integrations/: __init__.py  bedrock_chat_sii_rubro.py
backend/apps/migrations/: 0001_initial.py  0002_bankingcredentials.py  0002_customuser.py  0003_bankaccount_bankingcredentials_created_at_and_more.py  0004_userdetail.py  0005_userdetail_created_at_userdetail_updated_at_and_more.py  0006_bankmovement_unique_bank_account_movement_number.py  0007_processedservicelisting.py  0007_remove_userdetail_rut_bankaccount_user_and_more.py  0008_bankaccount_full_name.py  0009_merge_20241124_0452.py  0009_merge_20241124_0742.py
backend/django_template/: middleware.py  schema.py  settings.py  urls.py
django_template/: schema.py  settings.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  AppRoutes.js
frontend/src/apollo/: client.js
frontend/src/components/: CredentialsRoute.js  LogoutButton.js  MetricsCard.jsx  NavBar.js  PrivateRoute.js  PublicRoute.js  SnackBarAlert.js  Title.js  TransactionTable.jsx  chatInterface.js  index.js  (+2 more)
nginx/: stage.conf
(+29 files in other folders)
