[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.3"
graphene-django = "^3.2.2"
boto3 = "1.28.62"
django-graphql-jwt = "^0.4.0"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "2.9.5"
python-dotenv = "0.14.0"
gunicorn = "20.1.0"
uvicorn = {extras = ["standard"], version = "0.17.6"}
django-cors-headers = "^4.6.0"
openai = "^1.55.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
